# geometry

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
benchmarks/: CMakeLists.txt  Insert.cc  Query.cc  Utils.h  main.cc
include/: CMakeLists.txt  Definitions.h  Point.h  Polygon.h  QuadTree.h  Rect.h  Segment.h  SimplePolygon.h  Square.h  Utility.h  Vector.h  main.cc
tests/: CMakeLists.txt  IndexTestingUtils.h  QuadTree.cc  RTreeUnitTests.cc  SpaceUtil.cc  main.cc
